--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
             - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable
             - JWT_SECRET=${JWT_SECRET}
             - PORT=${PORT:-3000}
+            - REDIS_ADDR=redis:6379
         depends_on:
             db:
                 condition: service_healthy
@@ -36,6 +37,11 @@ services:
             interval: 5s
             timeout: 5s
             retries: 5
+
+    redis:
+        image: redis:latest
+        ports:
+            - "6379:6379"
 
 volumes:
     postgres_data:
