feat: add login form

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,4 @@ POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=hompim_rent
 JWT_SECRET=your_jwt_secret
+CORS_ALLOW_ORIGINS=https://example.com
