--- a/backend/docker-compose.prod.yaml
+++ b/backend/docker-compose.prod.yaml
@@ -44,5 +44,20 @@ services:
         ports:
             - "6379:6379"
 
+    migrate:
+        image: migrate/migrate
+        volumes:
+            - ./database/migrations:/migrations
+        depends_on:
+            db:
+                condition: service_healthy
+        entrypoint:
+            [
+                "migrate",
+                "-path=/migrations",
+                "-database=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable",
+                "up",
+            ]
+
 volumes:
     postgres_data:
