--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -43,7 +43,7 @@ services:
         image: redis:latest
         ports:
             - "6379:6379"
-            
+
     migrate:
         image: migrate/migrate
         volumes:
@@ -51,12 +51,13 @@ services:
         depends_on:
             db:
                 condition: service_healthy
-        entrypoint: [
-            "migrate",
-            "-path=/migrations",
-            "-database=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable",
-            "up"
-        ]
+        entrypoint:
+            [
+                "migrate",
+                "-path=/migrations",
+                "-database=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable",
+                "up",
+            ]
 
 volumes:
     postgres_data:
